@@ -971,7 +971,7 @@ tgdb_get_quit_command (struct tgdb *tgdb, int *tgdb_will_quit)
 }
 
 size_t
-tgdb_recv_debugger_console_data (struct tgdb *tgdb, char *buf, size_t n)
+tgdb_process (struct tgdb *tgdb, char *buf, size_t n)
 {
   char local_buf[10 * n];
   ssize_t size;
